# libmatio

./: Makefile.am  Makefile.in  README  aclocal.m4  autogen.sh  bootstrap  configure  configure.ac
build-scripts/: build_linux
config/: libtool.m4  ltmain.sh  ltversion.m4  matio_hdf5.m4  pgi-cflags  pgi-fflags
doxygen/: Makefile.in
doxygen/dev_api/: Makefile.in
doxygen/user_api/: Makefile.in
getopt/lib/: Makefile.in
src/: Makefile.am  Makefile.in  endian.c  inflate.c  io.c  mat.c  mat4.c  mat5.c  mat5.h  mat73.c  mat73.h  matio.h  matioConfig.h.in  matio_private.h  read_data.c
src/fortran/: Makefile.am  matio_internal.c  matio_t.inc.in
test/: Makefile.am  Makefile.in  test_mat.c
tools/: Makefile.am  Makefile.in  matdump.c
